fix: 사고다발지역 정보 엔티티 저장으로 수정